# CNTC

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
cntc/: __init__.py  cli.py
cntc/certification/: __init__.py  certificate.py  scorecard.py
cntc/standards/: __init__.py  conformance.yaml  performance.yaml
cntc/verdict/: __init__.py  evaluate.py
configs/: MY-UPF-001.yaml  _afpkt.yaml  free5gc.yaml  oai-rawmax.yaml  oai-upf-local.yaml  oai-upf.yaml  open5gs.yaml  sdcore-bess-all16.yaml  sdcore-bess-cntt.yaml  sdcore-bess-n3neg.yaml  sdcore-bess-trex.yaml  sdcore-bess.yaml  sdcore-rawmax.yaml  trex_cfg.yaml
dashboard/: README.md  app.py  catalog_data.py  charts.py  components.py  data.py  export_static.py  theme.py
docs/: 5g-core-testing-landscape.md  BRING-YOUR-OWN-SDCORE.md  CNTC-GOVERNANCE.md  CNTC-REQUIREMENTS.md  OVERVIEW.md  PLAN.md  RUNBOOK.md  UPF-Benchmark-Framework-Plan.docx  benchmarking-guide.md  config-reference.md  docker-deployment.md  dpdk-testing-guide.md  free5gc-ueransim-e2e-guide.md  fresh-vm-setup.md  oai-upf-testing.md  open5gs-deployment.md  open5gs-ueransim-e2e-guide.md  ueransim-e2e-and-sdcore-datapath.md  upfbench-overview.docx  upfbench-runbook.docx
scripts/: bootstrap_fresh_vm.sh  cntc-configure.py  cntc-prereqs.sh  cntc-run-all.sh  deploy_open5gs.sh  make_detailed_report.py  make_summary_report.py  sdcore_ueransim_datapath_fix.sh  upfbench-docker.sh
tests/: test_verdict.py
upfbench/: cli.py  config.py  doctor.py  flows.py  results.py  runner.py  search.py
(+57 files in other folders)
